app/styles.scss
/* set colors */

// $background: #f0e8d9;
// $background: #f5f5dc;
// $background: #fcffe0;
$background: rgb(251, 245, 225);
$primary: #426973;
$brightprimary: #2f4c53;
$highlight: #850e35;
//$cardcolor: #fcffe0;
// $cardcolor: hsl(54, 30%, 94%);
$cardcolor: rgb(232, 225, 202);

// $cardcolor: hsl(0, 0%, 90%);
// default white
$white: hsl(221, 14%, 100%);
// deafult text
// grey - dark
$text: hsl(0, 0%, 29%);
// $darktext:

/* override global sass variables */
@use "bulma/sass/utilities" with (
  /* not working !!! */ $family-primary: '"Original Garmond",serif',
  // $family-primary: '"Nunito", sans-serif', ^^^ will show up with --bulma has text primary className
  // primary is primary
  /// link is highlight
  // info is background
  $background: $background,
  $scheme-main: $background,
  $scheme-main-bis: $primary,
  $scheme-main-ter: $highlight,
  // above here isn't doing anything
  $primary: $primary,
  $link: $highlight,
  $info: $background,
  $success: $brightprimary,
  $text: $text
);

@forward "bulma/bulma";

/* css variables override*/
:root {
  --bulma-body-background-color: #{$background};
  --bulma-navbar-min-height: 400px;
  --bulma-section-padding: 1rem 1rem !important;
  // --bulma-body-background-color: #f5f4ce;
  // get rid of scroll bar when not needed
  // --bulma-body-family: $family-primary;
  overflow-y: auto;
}

/* font */
@font-face {
  font-family: "Original Garamond";
  src: url("/fonts/ogr.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
}

.navbar-item {
  color: $white !important;
}
.navbar-link {
  color: $white;
}

body {
  display: flex;
  flex-direction: column;
  // changed this from min-height: 100vh for the iframe. Make sure it still works!!!!
  height: 100vh;
  // min-height: 100vh;
}

.pageContainer {
  flex-direction: column;
  display: flex;
  align-items: center;
  flex: 1;
}

.outline-link {
  color: rgba($text, 0.7);
}
.project-subtitle {
  color: rgba($text, 0.9);
}

.outline-link:hover {
  text-decoration: underline !important;
  color: $highlight !important;
}

.image-float-right {
  float: right; /* Aligns the image to the right */
  margin-left: 20px; /* Adds space between the image and the text */
  margin-right: 0px !important;
  padding-right: 0px;
}

.my-footer {
  margin-bottom: 15px;
}

.my-section {
  padding: 1rem 0rem;
  display: flex;
}

.hero-body {
  padding-left: 0rem;
}

// .section {
//   margin-left: 0px !important;
//   margin-right: 0px !important;
// }

// margin-left: 10px;
// margin-right: 10px;

.img-container {
  padding-top: 2rem;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.meme-image {
  width: 300px;
}

/* slim container */
.slim-container {
  width: 975px;
}

.cards {
  display: flex;
  justify-content: center;
  width: 100%;
}

.my-card {
  background-color: $cardcolor !important;
  // background-color: lighten($background, 4%);
  // width: 800px;
  // border: 1px solid $text;
  margin-bottom: 1rem;
  padding: 1rem;
  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
  color: hsl(0, 0%, 7%);

  // border: 1px black solid;
}

.super-slim-container {
  width: 800px;
}

@media screen and (max-width: 800px) {
  /* Adjusts for devices smaller than 768px */
  .super-slim-container {
    width: 100%;
  }
}

/* Custom CSS file */
@media screen and (max-width: 1039px) {
  /* Adjusts for devices smaller than 768px */
  .slim-container {
    width: 100%;
    padding-left: 32px; /* Adds 10px padding to the left */
    padding-right: 32px; /* Adds 10px padding to the right */
  }
}

#henryface {
  margin-right: 5rem;
  // padding-top: 10px;
}

#cody-face {
  width: 200px;
  height: 200px;
  // margin-left: 20px;
}

.page-chunk {
  padding-bottom: 1.5rem;
}
.inner-page-chunk {
  padding-bottom: 1rem;
}
.blog-snippet {
  // width: 600px;
  // height: 200px;
  margin-bottom: 25px;
}
.blog-snippet-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 60px;
}

.navbar-dropdown {
  border-top: 0px !important;
}

.navbar-item-active {
  background-color: darken($primary, 5%) !important;
}

.pageContNonHero {
  padding-top: 3rem;
  // display: flex;
}
.centered {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.project-btn {
  border: 1px solid !important;
  // color: hsl(0, 0%, 4%) !important;
  // color: $text !important;
  background-color: $primary;
  color: white !important;

  border-color: $text !important;
  margin-right: 0.5rem !important;
}

.project-btn:hover {
  background-color: $highlight;
  // color: hsl(0, 0%, 96%);

  // color: $text !important;
}

.project-btn-container {
  padding-top: 0.5rem;
}

.iframeCont {
  width: 100%;
  height: 100%;
}
.iframebelowcont {
  width: 100%;
  display: flex;
  justify-content: flex-start;
}

// // Import the Google Font
// @import url("https:; //fonts.googleapis.com/css?family=Nunito:400,700");

/*
old schemes
*/

// #pageContainer {
//   display: flex;
//   flex-direction: column;
//   align-items: center;
//   /* width: 100%; */
//   margin: 0px;
//   height: 10000px;
//   /* 1 */
//   /* background-color: #fcffe0; */
//   /* 1.5 */
//   background-color: #fcffe0;

//   /* 2 */
//   /* background-color: #f5f5dc; */
// }

// #navbar {
//   margin-top: 0px;
//   /* 1 */
//   /* background-color: #75a47f; */

//   /* 1.5 */
//   background-color: #426973;

//   /* 2 */

//   /* background-color: #bfa446; */
//   width: 100%;
//   height: 70px;
// }

// #content-1 {
//   /* background-color: red; */
//   width: 80%;
//   height: 200px;
//   margin: 40px;
//   /* 1 */
//   /* color: black; */
//   /* 1.5 */
//   color: black;

//   /* 2 */
//   /* color: #4a4a4a; */
// }

// #content-2 {
//   /* background-color: red; */
//   width: 80%;
//   height: 200px;
// }
// #subtitle {
//   font-size: 20px;
//   /* 1 */
//   /* color: black; */
//   /* 1.5 */
//   color: black;

//   /* 2 */
//   /* color: #4a4a4a; */
// }
// #title {
//   font-size: 30px;
//   /* 1 */
//   /* color: #75a47f; */

//   /* 1.5 */
//   color: #2f4c53;
//   /* 2 */
//   /* color: #8d742a; */
// }

// #btn {
//   /* text color */
//   color: white;
//   /* btn color */
//   /* 1 */
//   /* background-color: #8e3e63;
//   border-color: #8e3e63; */
//   /* 1.5 */
//   background-color: #8e3e63;
//   border-color: #8e3e63;
//   /* 2 */
//   /* background-color: #b36276; */
//   /* border-color: #b36276; */
// }

